# Copyright (c) 2022 Huawei Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "hdf/platform"

ohos_fuzztest("GpioFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file =
      "//drivers/framework/support/platform/test/fuzztest/gpio_fuzzer"

  include_dirs = [
    "//drivers/framework/support/platform/test/fuzztest/gpio_fuzzer",
    "//drivers/framework/include/platform",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "gpio_fuzzer.cpp" ]

  deps = [ "//drivers/adapter/uhdf2/platform:libhdf_platform" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "utils_base:utils",
  ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":GpioFuzzTest" ]
}
